# ComfyUI-IPAdapter-Flux

./: attention_processor.py  hashes.py  ipadapter_flux.py  ipadapter_flux_advanced.py  pyproject.toml  utils.py
flux/: layers.py
